# mycv-python

./: README.md
Sudoku/: sudoku.py
Sudoku-GUI-automatic-solver/: .coverage  README.md  pyproject.toml  setup.cfg  solver.py
Sudoku-GUI-automatic-solver/src/sudokusolver/: solver.py  sudoku.py
Sudoku-GUI-automatic-solver/src/sudokusolver.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
Sudoku-GUI-automatic-solver/tests/: test_solver.py  test_sudoku.py  test_values.py
mass-sender-app/: sender.kv  sender_app.py
stock-informator/: .gitignore  README.md  stocknews.py
weather-station-raspberry/: README.md
weather-station-raspberry/host_device/: bme280_sensor.py  importing.py  main_app.py  main_internet_page.py  mqtt_receive.py  plotting.py  sensor_data.py
weather-station-raspberry/host_device/data/: home_bme280.json  now_home.json  now_out.json  outside.json
weather-station-raspberry/host_device/templates/: home.html  layout.html
weather-station-raspberry/sender/: bme280_sensor.py  mqtt_send.py  sds_sensor.py
